Issue #9 | Added Ability to group by and sort on Date Columns